--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="lg-text">Kush jemi ne?</h1>
-                    <p class="image-aboutus-para">Ne jemi cfare ju kerkoni...</p>
+                    <h1 class="lg-text">{{ 'Kush jemi ne?'| translate }}</h1>
+                    <p class="image-aboutus-para">{{'Ne jemi cfare ju kerkoni...' | translate}}</p>
                 </div>
             </div>
         </div>
@@ -14,8 +14,9 @@
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-8">
                     <ol class="breadcrumb">
-                        <li><a href="" style="color:  #1f1f89; text-decoration: none;">Kryefaqja</a></li>
-                        <li class="active">Rreth nesh</li>
+                        <li><a href="" style="color:  #1f1f89; text-decoration: none;">{{'Kryefaqja' | translate}}</a>
+                        </li>
+                        <li class="active">{{'Reth nesh' | translate}}</li>
                     </ol>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-4">
@@ -28,97 +29,70 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="strong">Pastificio Antonio <br>Pallante</h1>
-                    <p class="lead">Qe prej vitit 1949...</p>
+                    <p class="lead">{{'Qe prej vitit 1949...' | translate}}</p>
                 </div>
                 <div class="col-md-6">
-                    <p>Kompania Pastificio Antonio Pallante , nje nga dhjetë prodhuesit kryesorë italianë të
-                        makaronave që prej
-                        katër brezash, makarona të prodhuara në një fabrikë ultramoderne në Caserta - rreth 300 ton
-                        në ditë - duke kombinuar traditën më të mirë të prodhimit të makaronave italiane me lëndët e
-                        para më të mira dhe teknologjinë e lartë.</p>
-                    <p>Nga pikëpamja tregtare, Pastificio Antonio Pallante Srl është transformuar nga një realitet
-                        që plotëson nevojat e tregut vendas në një realitet që eksporton në shumë vende të tjera dhe
-                        ka zhvilluar marrëdhënie midis klientëve dhe zinxhirëve tregtarë në mbarë botën.</p>
+                    <p>{{'p1' | translate}}</p>
+                    <p>{{'p2' | translate}}</p>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us section-bg">
-        <div class="container-fluid" data-aos="fade-up">
-
+        <div class="container" data-aos="fade-up">
             <div class="row">
-                <div class="d-flex align-items-center">
-                    <div
-                        class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
-
-                        <div class="content">
-                            <h3 style="color: #1f1f89;">Perse <strong>ne?</strong></h3>
-
-                        </div>
-
-                        <div class="accordion-list">
-                            <ul>
-                                <li>
-                                    <a data-bs-toggle="collapse" class="collapse"
-                                        data-bs-target="#accordion-list-1"><span>01</span> Non consectetur a erat
-                                        nam at
-                                        lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i
-                                            class="bx bx-chevron-up icon-close"></i></a>
-                                    <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Fabrika e Antonio Pallante përbëhet nga 5 linja prodhimi dhe 13 linja të
-                                            automatizuara paketimi për jastëkë dhe pako.Gjithashtu ka 2 makineri
-                                            paketimi për kuti kartoni.
-                                        </p>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2"
-                                        class="collapsed"><span>02</span> Feugiat scelerisque varius morbi enim
-                                        nunc? <i class="bx bx-chevron-down icon-show"></i><i
-                                            class="bx bx-chevron-up icon-close"></i></a>
-                                    <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi.
-                                            Id
-                                            interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus
-                                            scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper
-                                            dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                                        </p>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3"
-                                        class="collapsed"><span>03</span> Dolor sit amet consectetur adipiscing
-                                        elit? <i class="bx bx-chevron-down icon-show"></i><i
-                                            class="bx bx-chevron-up icon-close"></i></a>
-                                    <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis
-                                            orci.
-                                            Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit
-                                            amet
-                                            nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis
-                                            convallis convallis tellus. Urna molestie at elementum eu facilisis sed
-                                            odio
-                                            morbi quis
-                                        </p>
-                                    </div>
-                                </li>
-
-                            </ul>
-                        </div>
-
+                <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch order-2 order-lg-1">
+                    <div class="content">
+                        <h3 style="color: #1f1f89;">{{'Perse' | translate}} <strong>{{'ne?' | translate}}</strong></h3>
                     </div>
-
-                    <div class="col-md-5  order-1 order-lg-2 img why-us-img">
-
-
+                    <div class="accordion-list">
+                        <ul>
+                            <li>
+                                <a data-bs-toggle="collapse" class="collapse"
+                                    data-bs-target="#accordion-list-1"><span>01</span> Non consectetur a erat nam at
+                                    lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i
+                                        class="bx bx-chevron-up icon-close"></i></a>
+                                <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
+                                    <p>
+                                        Fabrika e Antonio Pallante përbëhet nga 5 linja prodhimi dhe 13 linja të
+                                        automatizuara paketimi për jastëkë dhe pako.Gjithashtu ka 2 makineri paketimi
+                                        për kuti kartoni.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2"
+                                    class="collapsed"><span>02</span> Feugiat scelerisque varius morbi enim nunc? <i
+                                        class="bx bx-chevron-down icon-show"></i><i
+                                        class="bx bx-chevron-up icon-close"></i></a>
+                                <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
+                                    <p>
+                                        Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id
+                                        interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus
+                                        scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+                                        Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3"
+                                    class="collapsed"><span>03</span> Dolor sit amet consectetur adipiscing elit? <i
+                                        class="bx bx-chevron-down icon-show"></i><i
+                                        class="bx bx-chevron-up icon-close"></i></a>
+                                <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
+                                    <p>
+                                        Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci.
+                                        Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl
+                                        suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis
+                                        convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-5 order-1 order-lg-2 why-us-img">
+                    <div class="embed-responsive embed-responsive-16by9">
                         <iframe width="640" height="340" src="https://www.youtube.com/embed/PkmtKU7oFV0"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -128,10 +102,8 @@
             </div>
 
         </div>
-    </section><!-- End Why Us Section -->
-
-</section>
-
+    </section>
+</section> -->
 
 
 
@@ -144,7 +116,9 @@
                 <div class="card card-just-text">
                     <div class="content">
                         <h4 class="title title-card">Cilesia</h4>
-                        <p class="description">Attilio Pallante, themeluesi i vërtetë i traditës së prodhimit të makaronave, ka thënë me vendosmëri se nuk duhet të "sakrifikohet kurrë cilësia për vëllime".</p>
+                        <p class="description">Attilio Pallante, themeluesi i vërtetë i traditës së prodhimit të
+                            makaronave, ka thënë me vendosmëri se nuk duhet të "sakrifikohet kurrë cilësia për vëllime".
+                        </p>
                     </div>
                 </div> <!-- end card -->
             </div>
@@ -155,7 +129,8 @@
                 <div class="card card-just-text" data-background="color">
                     <div class="content">
                         <h4 class="title title-card">Cmimet konkurruese</h4>
-                        <p class="description">Teknologjia e lartë në prodhim dhe procesi i mekanizimit i mundëson kompanisë të konkurrojë në çmim duke ruajtur një produkt me cilësi të lartë.</p>
+                        <p class="description">Teknologjia e lartë në prodhim dhe procesi i mekanizimit i mundëson
+                            kompanisë të konkurrojë në çmim duke ruajtur një produkt me cilësi të lartë.</p>
                     </div>
                 </div> <!-- end card -->
             </div>
@@ -166,7 +141,9 @@
                 <div class="card card-just-text">
                     <div class="content">
                         <h4 class="title title-card">Biznes nderkombetar</h4>
-                        <p class="description">Pastificio Antonio Pallante është transformuar nga një realitet që plotëson nevojat e tregut vendas në një realitet qe ka zhvilluar marrëdhënie me klientëve në mbarë botën</p>
+                        <p class="description">Pastificio Antonio Pallante është transformuar nga një realitet që
+                            plotëson nevojat e tregut vendas në një realitet qe ka zhvilluar marrëdhënie me klientëve në
+                            mbarë botën</p>
                     </div>
                 </div> <!-- end card -->
             </div>
