--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,7 @@
 <div class="container py-4">
+    <div class="row">
+        <h1 class="text-center" style="color: #1f1f89;   font-family: 'Great Vibes', cursive;font-weight:bold ;">Malo Group</h1>
+    </div>
     <div class="row d-flex justify-content-around">
         <div class="col-md-5">
             <!-- Bootstrap 5 starter form -->
